Bug 189672 - Entering a "http://.." location in the location bar fails with "Could not find the program '!firefox'"
Summary: Entering a "http://.." location in the location bar fails with "Could not fin...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: Ubuntu Unspecified
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-04-15 01:38 UTC by Daniel Hahler
Modified: 2009-04-15 19:14 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Daniel Hahler 2009-04-15 01:38:40 UTC
Version:            (using KDE 4.2.2)
Installed from:    Ubuntu Packages

Entering a "http://.." location in the location bar fails with "Could not find the program '!firefox'"


This has been reported in Launchpad/Ubuntu at:
https://launchpad.net/bugs/354768
Comment 1 Peter Penz 2009-04-15 19:14:38 UTC
SVN commit 954343 by ppenz:

remove the '!' prefix, which is used for a literal command

BUG: 189672

 M  +4 -0      dolphinviewcontainer.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=954343