remove the '!' prefix, which is used for a literal command

BUG: 189672

svn path=/trunk/KDE/kdebase/apps/; revision=954343